# gr-gs

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  TODO  gr-gs_Descrambler.xml  gr-gs_GuidedScrambler.xml.in  gr-gs_PulseGenerator.xml  gr-gs_SymbolGenerator.xml  gr-gs_SymbolGenerator.xml.in  gr_gs.i  gr_gs.i.in  gs_sim.py  swig.i
data/02/: scrambler.txt
data/02/02/: 01-scrambler.txt  01.txt
data/02/03/: 01.txt
data/02/04/: 01.txt  02.txt
data/02/05/: 01.txt  02.txt
data/02/06/: 01.txt  02.txt  03.txt
data/02/07/: 01.txt  02.txt  03.txt
data/02/08/: 01.txt  02.txt  03.txt  04.txt
data/02/09/: 01.txt  02.txt  03.txt  04.txt
data/02/10/: 01.txt  02.txt  03.txt  04.txt  05-scrambler.txt  05.txt
data/02/108/: 12-scrambler.txt  12.txt
data/02/11/: 01.txt  02.txt  03.txt  04.txt  05.txt
data/02/12/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt
data/02/13/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt
data/02/14/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt
data/02/15/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt
data/02/16/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt
data/02/17/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt
data/02/18/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt
data/02/19/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09-scrambler.txt  09.txt
data/02/20/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09-scrambler.txt  09.txt  10.txt
data/02/204/: 12.txt
data/02/21/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt
data/02/22/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09-scrambler.txt  09.txt  10.txt
data/02/23/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt
data/02/24/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt
data/02/36/: 12.txt
data/02/396/: 12.txt
data/02/60/: 12.txt
data/04/: scrambler.txt
data/04/02/: 01.txt
data/04/03/: 01.txt
data/04/04/: 01.txt  02.txt
data/04/05/: 01.txt  02.txt
data/04/06/: 01.txt  02.txt  03.txt  04.txt
data/04/07/: 01.txt  02.txt  03.txt
data/04/08/: 01.txt  02.txt  03.txt  04-scrambler.txt  04.txt
data/04/09/: 01.txt  02.txt  03.txt  04.txt
data/04/10/: 01.txt  02.txt  03.txt  04.txt  05.txt
data/04/11/: 01.txt  02.txt  03.txt  04.txt  05.txt
data/04/12/: 01.txt  02.txt  03.txt  04.txt  05.txt  06-scrambler.txt  06.txt
data/04/13/: 01.txt  02.txt  03.txt  04.txt  05.txt  06-scrambler.txt  06.txt
data/04/14/: 01.txt  02.txt  03.txt  04.txt  05-scrambler.txt  05.txt  06.txt
data/04/15/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt
data/04/16/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt
data/04/17/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt
data/04/18/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt
data/04/19/: 01.txt  02.txt  03.txt  04-scrambler.txt  04.txt  05.txt  06.txt
data/04/20/: 01.txt  02.txt  03.txt  04.txt  05-scrambler.txt  05.txt  06.txt
data/04/21/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt
data/04/22/: 01.txt  02.txt  (+4 more)
data/16/: scrambler.txt
grc/: gr-gs_Autocovariance.xml  gr-gs_Average.xml  gr-gs_BCJR.xml  gr-gs_Descrambler.xml  gr-gs_Descrambler.xml.in  gr-gs_Detector.xml  gr-gs_Distribution.xml  gr-gs_Entropy.xml  gr-gs_ErrorCount.xml  gr-gs_ErrorCount.xml.in  gr-gs_GuidedScrambler.xml  gr-gs_GuidedScrambler.xml.in  gr-gs_InfiniteAverage.xml  gr-gs_InfiniteDistribution.xml  gr-gs_InfiniteIntegrate.xml  gr-gs_Integrate.xml  gr-gs_PulseGenerator.xml.in  gr-gs_SymbolGenerator.xml  gr-gs_SymbolGenerator.xml.in  gr-gs_SymbolMapper.xml  gr-gs_SymbolMapper.xml.in  gr-gs_Terminator.xml  gr-gs_defaultConstellation.xml  gr-gs_defaultScrambler.xml  gr-gs_primitive.xml  gs_demo.grc
include/: Analyzer.hpp  Autocovariance_impl.hpp  Average_impl.hpp  BCJR_impl.hpp  Descrambler_impl.hpp  Detector_impl.hpp  Distribution_impl.hpp  Entropy_impl.hpp  ErrorCount_impl.hpp  GF16.hpp  GF2.hpp  GF4.hpp  GF8.hpp  GuidedScrambler_impl.hpp  InfiniteAverage_impl.hpp  InfiniteDistribution_impl.hpp  InfiniteIntegrate_impl.hpp  Integrate_impl.hpp  MSW.hpp  MSW2.hpp  ProbabilityMapper.hpp  PulseGenerator_impl.hpp  QExponentialSpinBox.hpp  Scrambler.hpp  ScramblerGroup.hpp  SymbolGenerator_impl.hpp  SymbolMapper_impl.hpp  Terminator_impl.hpp  WRDS.hpp  Word.hpp  Words.hpp  audioReceiver.hpp  gui.hpp  guidedScramblingDemo.hpp  test.hpp
include/gr-gs/: Autocovariance.h  Average.h  BCJR.h  ComplexInteger.h  Data.h  Descrambler.h  Detector.h  Distribution.h  Entropy.h  ErrorCount.h  GuidedScrambler.h  InfiniteAverage.h  InfiniteDistribution.h  InfiniteIntegrate.h  Integrate.h  Primitives.h  PulseGenerator.h  SymbolGenerator.h  SymbolMapper.h  Terminator.h  config.h  config.h.in  exceptions.h
include/gr-isatec/: Descrambler.h  Exceptions.hpp  GuidedScrambler.h  PulseGenerator.h  SymbolGenerator.h  api.h  config.h
scripts/: errorRates.py  findScramblers.py  generateData.py  generateStatistics.py  gsErrorRates.py  spectrum.py  statistics.py
src/: Analyzer.cpp  Analyzer_test.cpp  Autocovariance_impl.cpp  Average_impl.cpp  BCJR_impl.cpp  ComplexInteger.cpp  Data.cpp  Descrambler_impl.cpp  Descrambler_test.cpp  Detector_impl.cpp  Distribution_impl.cpp  Entropy_impl.cpp  ErrorCount_impl.cpp  GuidedScrambler_impl.cpp  GuidedScrambler_test.cpp  InfiniteAverage_impl.cpp  InfiniteDistribution_impl.cpp  InfiniteIntegrate_impl.cpp  Integrate_impl.cpp  MSW.cpp  MSW2.cpp  Primitives.cpp  ProbabilityMapper.cpp  PulseGenerator.cpp  PulseGenerator_impl.cpp  Scrambler.cpp  ScramblerGroup.cpp  ScramblerGroup_test.cpp  Scrambler_test.cpp  SymbolGenerator_impl.cpp  SymbolMapper_impl.cpp  Terminator_impl.cpp  WRDS.cpp  Word_test.cpp  Words.cpp  audioReceiver.cpp  gui.cpp  guidedScramblingDemo.cpp  test.cpp
tests/: Analyzer.cpp  Descrambler.cpp  GuidedScrambler.cpp  ProbabilityMapper.cpp  Scrambler.cpp  ScramblerGroup.cpp  Word.cpp  Words.cpp
ui/: audioReceiver.ui  gs.ui  guidedScramblingDemo.ui
(+79 files in other folders)
